# SomethingHere

./: .gitignore  .gitmodules  CMakeLists.txt  OUTLINE.md  README.md
assets/gimp_projs/: agent.xcf  energy_cell.xcf  wall.xcf
doc/: OUTLINE.md
lib/glad/: glad.c  glad.h
src/: draw_screen.c  draw_screen.h  main.c  main.cpp  textures.h  tick_code.c  tick_code.h
src/RandomGeneration/: mapGenerator.cpp  mapGenerator.h
src/ai/: TODO.md  agent.h  agents.cpp  ai.h  ai.hpp  control.cpp  geneticAlgorithm.cpp  random.cpp
src/renderingEngine/: draw_screen.c  draw_screen.h  textures.h
src/simulation/: tick_code.c  tick_code_win.cpp
src/world/: map.cpp  map.h  position.cpp  position.h  world.h  worldGenerator.cpp
